{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 41,
  "lineage": "ab729933-aab0-6419-5fb7-da6b4235bf5b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "api-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:559050235107:loadbalancer/app/rs-dev-lb/1cbd7a805ddfb781",
            "arn_suffix": "app/rs-dev-lb/1cbd7a805ddfb781",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "rs-dev-lb-113708135.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:559050235107:loadbalancer/app/rs-dev-lb/1cbd7a805ddfb781",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "rs-dev-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-001b8cb3ef99c8b0c",
              "sg-08354d709ce4bf9b6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05ccddd402d3a18b1"
              },
              {
                "subnet_id": "subnet-0738036c3f0a1b755"
              }
            ],
            "subnets": [
              "subnet-05ccddd402d3a18b1",
              "subnet-0738036c3f0a1b755"
            ],
            "tags": {
              "env": "rs-dev"
            },
            "tags_all": {
              "env": "rs-dev"
            },
            "vpc_id": "vpc-09f3d70a9e9ee0b6b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_internet_gateway.vpc-internet-gateway",
            "aws_internet_gateway_attachment.vpc-internet-gw-attachment",
            "aws_security_group.default-sg",
            "aws_security_group.https-access",
            "aws_subnet.subnet-a",
            "aws_subnet.subnet-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "api-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:559050235107:targetgroup/rs-dev-api-targetgroup/86e54def83b745e4",
            "arn_suffix": "targetgroup/rs-dev-api-targetgroup/86e54def83b745e4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:559050235107:targetgroup/rs-dev-api-targetgroup/86e54def83b745e4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:559050235107:loadbalancer/app/rs-dev-lb/1cbd7a805ddfb781"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rs-dev-api-targetgroup",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "env": "rs-dev"
            },
            "tags_all": {
              "env": "rs-dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09f3d70a9e9ee0b6b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a513547e513f0085",
            "arn": "arn:aws:ec2:us-east-1:559050235107:elastic-ip/eipalloc-0a513547e513f0085",
            "domain": "vpc",
            "id": "eipalloc-0a513547e513f0085",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-85-36-212.compute-1.amazonaws.com",
            "public_ip": "98.85.36.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "loc8-dev-eip"
            },
            "tags_all": {
              "Name": "loc8-dev-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.vpc-internet-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559050235107:internet-gateway/igw-0247e08188380a597",
            "id": "igw-0247e08188380a597",
            "owner_id": "559050235107",
            "tags": {
              "env": "loc8-dev"
            },
            "tags_all": {
              "env": "loc8-dev"
            },
            "vpc_id": "vpc-09f3d70a9e9ee0b6b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559050235107:route-table/rtb-032485d5bba392ac1",
            "id": "rtb-032485d5bba392ac1",
            "owner_id": "559050235107",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0247e08188380a597",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "loc8-dev-route-table-public"
            },
            "tags_all": {
              "Name": "loc8-dev-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f3d70a9e9ee0b6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc-internet-gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c37165ddb2e42cea",
            "route_table_id": "rtb-032485d5bba392ac1",
            "subnet_id": "subnet-05ccddd402d3a18b1"
          },
          "dependencies": [
            "aws_internet_gateway.vpc-internet-gateway",
            "aws_route_table.route_table_public",
            "aws_subnet.subnet-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559050235107:security-group/sg-001b8cb3ef99c8b0c",
            "description": "loc8 dev default security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65000
              }
            ],
            "id": "sg-001b8cb3ef99c8b0c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65000
              }
            ],
            "name": "loc8-dev-default-group",
            "name_prefix": "",
            "owner_id": "559050235107",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "loc8-dev"
            },
            "tags_all": {
              "env": "loc8-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f3d70a9e9ee0b6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559050235107:security-group/sg-08354d709ce4bf9b6",
            "description": "rs dev http(s) access",
            "egress": [],
            "id": "sg-08354d709ce4bf9b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "rs-dev-https-access",
            "name_prefix": "",
            "owner_id": "559050235107",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "rs-dev"
            },
            "tags_all": {
              "env": "rs-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f3d70a9e9ee0b6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559050235107:subnet/subnet-05ccddd402d3a18b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ccddd402d3a18b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "559050235107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "loc8-dev-subnet-a",
              "env": "loc8-dev"
            },
            "tags_all": {
              "Name": "loc8-dev-subnet-a",
              "env": "loc8-dev"
            },
            "vpc_id": "vpc-09f3d70a9e9ee0b6b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559050235107:subnet/subnet-0738036c3f0a1b755",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0738036c3f0a1b755",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "559050235107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "loc8-dev-subnet-b",
              "env": "loc8-dev"
            },
            "tags_all": {
              "Name": "loc8-dev-subnet-b",
              "env": "loc8-dev"
            },
            "vpc_id": "vpc-09f3d70a9e9ee0b6b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559050235107:vpc/vpc-09f3d70a9e9ee0b6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c504bdc6d6031359",
            "default_route_table_id": "rtb-0f3fcd88e3d1cd17e",
            "default_security_group_id": "sg-05db3557181e75734",
            "dhcp_options_id": "dopt-08cfe0d9008923b2a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09f3d70a9e9ee0b6b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f3fcd88e3d1cd17e",
            "owner_id": "559050235107",
            "tags": {
              "Name": "loc8-dev-vpc",
              "env": "loc8-dev"
            },
            "tags_all": {
              "Name": "loc8-dev-vpc",
              "env": "loc8-dev"
            }
          }
        }
      ]
    }
  ]
}